added timestamp return & moved logic to function

--- a/experiment/app/go-web-pods.yaml
+++ b/experiment/app/go-web-pods.yaml
@@ -7,6 +7,6 @@ metadata:
 spec:
   containers:
   - name: go-web
-    image: sample-web-go
+    image: go-web-test
     ports:
     - containerPort: 8000
