change testing rc to go-web-mem

--- a/experiment/app/go-web-pods.yaml
+++ b/experiment/app/go-web-pods.yaml
@@ -7,6 +7,6 @@ metadata:
 spec:
   containers:
   - name: go-web
-    image: go-web-test
+    image: go-web-mem
     ports:
     - containerPort: 8000
