--- a/experiment/nginx/nginx-rc.yaml
+++ b/experiment/nginx/nginx-rc.yaml
@@ -2,8 +2,10 @@ apiVersion: v1
 kind: ReplicationController
 metadata:
   name: nginx
+  labels:
+    app: nginx
 spec:
-  replicas: 2
+  replicas: 1
   selector:
     app: nginx
   template:
