--- a/experiment/ai_project/ai_rc.yaml
+++ b/experiment/ai_project/ai_rc.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
       - name: eight-puzzle
-        image: jigkoxsee/eight-puzzle:simple-ann
+        image: jigkoxsee/eight-puzzle
         ports:
         - containerPort: 8000
