--- a/experiment/kubeui/kube-ui-rc.yaml
+++ b/experiment/kubeui/kube-ui-rc.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ReplicationController
 metadata:
   name: kube-ui-v5
-  namespace: default
+  namespace: thoth
   labels:
     k8s-app: kube-ui
     version: v5
