--- a/experiment/kubeui/kube-ui-svc.yaml
+++ b/experiment/kubeui/kube-ui-svc.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: kube-ui
-  namespace: default
+  namespace: thoth
   labels:
     k8s-app: kube-ui
     kubernetes.io/cluster-service: "true"
